# scoundrel

./: Cargo.toml  README.md  rustfmt.toml
scoundrel/: Cargo.toml
scoundrel-algorithm/: Cargo.toml
scoundrel-algorithm/src/: a_star.rs  bresenham.rs  graph.rs  lib.rs  shadow_cast.rs  shadow_cast_2d.rs  space.rs
scoundrel-algorithm/src/shadow_cast_2d/: algorithm.rs  mod.rs  octant.rs  opacity.rs  slope.rs  tile_shape.rs
scoundrel-algorithm/tests/: a_star_integration.rs  bresenham_integration.rs  shadow_cast_integration.rs
scoundrel-geometry/: Cargo.toml
scoundrel-geometry/src/: bounds.rs  bresenham.rs  bsp.rs  grid2d.rs  half_space.rs  lib.rs  matrix.rs  metric.rs  neighborhood.rs  quadtree.rs  tilebin.rs  vector.rs
scoundrel-procedural/: Cargo.toml
scoundrel-procedural/src/: lib.rs  shader_preprocessor.rs
scoundrel-ui/: Cargo.toml
scoundrel-ui/src/: layout.rs  lib.rs  menu.rs
scoundrel-util/: Cargo.toml
scoundrel-util/src/: ascii_glyph.rs  intern_pool.rs  lib.rs  memoizer.rs  min_heap_entry.rs  numeric.rs  pointer_equality.rs  pq_entry.rs
scoundrel/src/: gpu.rs  lib.rs  terminal.rs  wgpu_helper.rs
