[package]
name = "scoundrel-geometry"
version = "0.1.0"
edition = "2021"

[dependencies]
scoundrel-util = { path = "../scoundrel-util" }
tui = { package = "ratatui", version = "0.20.1", default-features = false, features = ["crossterm"], optional=true }
serde = { version = "1.0", optional=true, features=["derive"]}
paste = "1.0.12"
thiserror = "1.0"
