[package]
name = "scoundrel-geometry"
version = "0.1.0"
edition = "2021"

[dependencies]
scoundrel-util = { path = "../scoundrel-util" }
tui = { package = "ratatui", version = "0.29.0", default-features = false, features = ["crossterm"], optional=true }
serde = { version = "1.0", optional=true, features=["derive"]}
paste = "1.0.15"
thiserror = "2.0"
