[package]
name = "scoundrel-procedural"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = {version = "1.0", features = ["quote", "full"]}
quote = "1.0"
naga = { version = "0.8", features = ["wgsl-in", "validate"] }
once_cell = "1.9"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
proc-macro-error = "1.0"
thiserror = "1.0"
wgpu = "0.12"

[lib]
proc-macro = true
