[package]
name = "scoundrel"
version = "0.1.0"
edition = "2021"

[dependencies]
scoundrel-algorithm = { path = "../scoundrel-algorithm" }
scoundrel-geometry = { path = "../scoundrel-geometry" }
scoundrel-util = { path = "../scoundrel-util" }
thiserror = "1.0"
tui = { version = "0.19", optional = true, default-features = false, features = ["crossterm"] }
crossterm = { version = "0.25", optional = true }

[features]
serde = ["scoundrel-geometry/serde", "scoundrel-util/_serde"]
terminal = ["scoundrel-geometry/tui", "tui", "crossterm"]
