[package]
name = "scoundrel"
version = "0.1.0"
edition = "2021"

[dependencies]
scoundrel-algorithm = { path = "../scoundrel-algorithm" }
scoundrel-geometry = { path = "../scoundrel-geometry" }
scoundrel-util = { path = "../scoundrel-util" }
thiserror = "2.0"
tui = { package = "ratatui", version = "0.29", optional = true, default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28.1", optional = true }

[features]
serde = ["scoundrel-geometry/serde", "scoundrel-util/serde"]
terminal = ["scoundrel-geometry/tui", "tui", "crossterm"]
